[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["sync", "macros"] }
aws-config = "1.3.0"
aws-sdk-s3 = "1.26.0"
aws-types = "1.2.0"
bytes = "1.6.0"
aws-credential-types = { version = "1.2.0", features = [
  "hardcoded-credentials",
] }
